--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <!-- Seção MENSAGEM MARQUEE -->
         <div class="marquee-box">
-            <span id="marqueeMessage" class="marquee-text">Auri Autopeças - 84 3087.0000</span>
+            <span id="marqueeMessage" class="marquee-text">Auri Autopeças - 84 3087.0000 Agradecemos a sua preferÊncia!</span>
         </div>
 
         <p id="loadingMessage" class="no-data-message">Carregando dados...</p>
