--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             padding: 15px 20px; /* Ajustado padding para a marquee */
             box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
             font-size: 2.2em; /* Tamanho da fonte para a mensagem */
-            font-weight: bold;
+            
             color: #333;
             overflow: hidden; /* Garante que o texto rola dentro da caixa */
         }
@@ -173,7 +173,7 @@
 
         <!-- Seção MENSAGEM MARQUEE -->
         <div class="marquee-box">
-            <span id="marqueeMessage" class="marquee-text">Auri Autopeças - 84 3087.0000 Agradecemos a sua preferÊncia!</span>
+            <span id="marqueeMessage" class="marquee-text">Auri Autopeças - 84 3087.0000 Agradecemos a sua preferência!</span>
         </div>
 
         <p id="loadingMessage" class="no-data-message">Carregando dados...</p>
