--- a/index.html
+++ b/index.html
@@ -13,42 +13,46 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #FFD700; /* Amarelo principal */
+            background-color: #FFFFFF; /* Fundo branco */
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
             overflow: hidden;
-            border-radius: 20px; /* Borda arredondada no body para simular o contorno da imagem */
+            /* Estilo de fundo pontilhado (vermelho/laranja) */
+            background-image: radial-gradient(#FF6347 1px, transparent 1px);
+            background-size: 10px 10px;
         }
         .panel-container {
-            background-color: #FFD700; /* Amarelo principal */
+            background-color: #FFFFFF; /* Fundo branco para o contêiner principal */
             border-radius: 20px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
             text-align: center;
             width: 100%;
-            max-width: 700px; /* Ajuste conforme a proporção da imagem */
+            max-width: 500px; /* Ajustado para uma orientação mais vertical */
             padding: 30px;
             display: flex;
             flex-direction: column;
             gap: 20px;
+            /* Borda vermelha/laranja */
+            border: 5px solid #FF0000; /* Vermelho puro para a borda */
         }
         .header-text {
             font-size: 3.5em;
             font-weight: bold;
-            color: #FFFFFF; /* Texto branco */
+            color: #FF0000; /* Vermelho para o título */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-            background-color: #FFD700; /* Mesma cor do fundo para o cabeçalho */
+            background-color: transparent; /* Fundo transparente */
             padding: 10px 0;
             border-radius: 10px;
         }
         .sections-grid {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr; /* Alterado para uma única coluna para empilhar verticalmente */
             gap: 20px;
             margin-bottom: 20px;
         }
         .section-box {
-            background-color: #FFEC8B; /* Amarelo mais claro para as caixas */
+            background-color: #FFFFFF; /* Fundo branco para as caixas internas */
             border-radius: 15px;
             padding: 20px;
             box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -56,11 +60,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            border: 1px solid #FF0000; /* Borda vermelha para as caixas internas */
         }
         .section-title {
             font-size: 1.8em;
             font-weight: bold;
-            color: #333; /* Texto escuro */
+            color: #333333; /* Preto para os títulos das seções */
             margin-bottom: 10px;
         }
         .ficha-atendendo {
@@ -72,7 +77,7 @@
         .guiche-atendendo {
             font-size: 2.5em;
             font-weight: bold;
-            color: #333;
+            color: #333333; /* Preto para o guichê */
         }
         .chamadas-list {
             list-style: none;
@@ -81,28 +86,29 @@
             text-align: center;
         }
         .chamadas-list-item {
-            font-size: 1.8em; /* REDUZIDO: Para caber "FICHA GUICHÊ X" na mesma linha */
+            font-size: 1.8em; 
             font-weight: bold;
-            color: #dc3545; /* Vermelho para chamadas */
+            color: #FF0000; /* Vermelho para chamadas */
             margin-bottom: 5px;
-            white-space: nowrap; /* Garante que o texto não quebre linha */
+            white-space: nowrap; 
         }
-        /* Novo estilo para a área da mensagem marquee */
+        /* Estilo para a área da mensagem marquee */
         .marquee-box {
-            background-color: #FFEC8B; /* Amarelo mais claro */
+            background-color: #FFFACD; /* Amarelo claro/creme para a marquee (LemonChiffon) */
             border-radius: 15px;
-            padding: 15px 20px; /* Ajustado padding para a marquee */
+            padding: 15px 20px; 
             box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
-            font-size: 2.2em; /* Tamanho da fonte para a mensagem */
-            
-            color: #333;
-            overflow: hidden; /* Garante que o texto rola dentro da caixa */
+            font-size: 2.2em; 
+            font-weight: bold;
+            color: #333333; /* Preto para o texto da marquee */
+            overflow: hidden; 
+            border: 1px solid #FF0000; /* Borda vermelha para a marquee */
         }
         .marquee-text {
-            white-space: nowrap; /* Impede que o texto quebre linha */
-            display: inline-block; /* Necessário para animação de rolagem */
-            padding-left: 100%; /* Inicia o texto fora da tela à direita */
-            animation: marquee 15s linear infinite; /* Animação de rolagem */
+            white-space: nowrap; 
+            display: inline-block; 
+            padding-left: 100%; 
+            animation: marquee 15s linear infinite; 
         }
         /* Animação de rolagem (marquee) */
         @keyframes marquee {
@@ -124,24 +130,24 @@
 
         /* Responsividade */
         @media (max-width: 768px) {
-            .panel-container { padding: 20px; }
+            .panel-container { padding: 20px; max-width: 90%; } /* Ajuste de largura para telas menores */
             .header-text { font-size: 2.5em; }
-            .sections-grid { grid-template-columns: 1fr; } /* Coluna única em telas menores */
+            .sections-grid { grid-template-columns: 1fr; } /* Garante coluna única em telas menores também */
             .section-title { font-size: 1.5em; }
             .ficha-atendendo { font-size: 4em; }
             .guiche-atendendo { font-size: 2em; }
-            .chamadas-list-item { font-size: 1.6em; } /* Ajuste responsivo */
+            .chamadas-list-item { font-size: 1.6em; } 
             .marquee-box { font-size: 1.8em; padding: 10px 15px; }
             .no-data-message { font-size: 1.5em; }
         }
 
         @media (max-width: 480px) {
-            .panel-container { padding: 15px; }
+            .panel-container { padding: 15px; max-width: 95%; } /* Ajuste de largura para telas muito pequenas */
             .header-text { font-size: 2em; }
             .section-title { font-size: 1.2em; }
             .ficha-atendendo { font-size: 3em; }
             .guiche-atendendo { font-size: 1.5em; }
-            .chamadas-list-item { font-size: 1.3em; } /* Ajuste responsivo */
+            .chamadas-list-item { font-size: 1.3em; } 
             .marquee-box { font-size: 1.5em; padding: 8px 10px; }
             .no-data-message { font-size: 1.2em; }
         }
@@ -149,7 +155,7 @@
 </head>
 <body>
     <div class="panel-container">
-        <div class="header-text">AGUARDE SUA VEZ</div>
+        <div class="header-text">SEJAM BEM-VINDOS!</div>
 
         <div class="sections-grid">
             <!-- Seção ATENDENDO -->
@@ -173,7 +179,7 @@
 
         <!-- Seção MENSAGEM MARQUEE -->
         <div class="marquee-box">
-            <span id="marqueeMessage" class="marquee-text">Auri Autopeças - 84 3087.0000 Agradecemos a sua preferência!</span>
+            <span id="marqueeMessage" class="marquee-text">Bem-vindo ao nosso atendimento! Aguarde sua vez e obrigado pela paciência.</span>
         </div>
 
         <p id="loadingMessage" class="no-data-message">Carregando dados...</p>
