--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             min-height: 100vh;
             background-color: #FFFFFF; /* Fundo branco */
             margin: 0;
-            padding: 20px;
+            padding: 10px; /* Reduzido o padding do body */
             box-sizing: border-box;
             overflow: hidden;
             /* Estilo de fundo pontilhado (vermelho/laranja) */
@@ -28,33 +28,33 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
             text-align: center;
             width: 100%;
-            max-width: 500px; /* Ajustado para uma orientação mais vertical */
-            padding: 30px;
+            max-width: 850px; /* Levemente reduzido para uma orientação mais horizontal compacta */
+            padding: 20px; /* Reduzido o padding do container */
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 15px; /* Reduzido o espaçamento entre as seções */
             /* Borda vermelha/laranja */
             border: 5px solid #FF0000; /* Vermelho puro para a borda */
         }
         .header-text {
-            font-size: 3.5em;
+            font-size: 3em; /* Levemente reduzido */
             font-weight: bold;
             color: #FF0000; /* Vermelho para o título */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
             background-color: transparent; /* Fundo transparente */
-            padding: 10px 0;
+            padding: 5px 0; /* Reduzido o padding */
             border-radius: 10px;
         }
         .sections-grid {
             display: grid;
-            grid-template-columns: 1fr; /* Alterado para uma única coluna para empilhar verticalmente */
-            gap: 20px;
-            margin-bottom: 20px;
+            grid-template-columns: 1fr 1fr; /* Duas colunas para layout horizontal */
+            gap: 15px; /* Reduzido o espaçamento entre as colunas */
+            margin-bottom: 15px; /* Reduzido a margem inferior */
         }
         .section-box {
             background-color: #FFFFFF; /* Fundo branco para as caixas internas */
             border-radius: 15px;
-            padding: 20px;
+            padding: 15px; /* Reduzido o padding da caixa de seção */
             box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: column;
@@ -63,19 +63,20 @@
             border: 1px solid #FF0000; /* Borda vermelha para as caixas internas */
         }
         .section-title {
-            font-size: 1.8em;
+            font-size: 1.6em; /* Levemente reduzido */
             font-weight: bold;
             color: #333333; /* Preto para os títulos das seções */
-            margin-bottom: 10px;
+            margin-bottom: 8px; /* Reduzido a margem inferior */
         }
         .ficha-atendendo {
-            font-size: 5em;
+            font-size: 4.5em; /* Levemente reduzido */
             font-weight: bold;
             color: #28a745; /* Verde para a ficha principal */
-            animation: pulse 1.5s infinite alternate;
+            /* ANIMAÇÃO DE PULSO REMOVIDA AQUI */
+            /* Certifique-se de que esta linha NÃO contém 'animation: pulse...' */
         }
         .guiche-atendendo {
-            font-size: 2.5em;
+            font-size: 2.2em; /* Levemente reduzido */
             font-weight: bold;
             color: #333333; /* Preto para o guichê */
         }
@@ -86,19 +87,19 @@
             text-align: center;
         }
         .chamadas-list-item {
-            font-size: 1.8em; 
+            font-size: 1.6em; /* Levemente reduzido */
             font-weight: bold;
             color: #FF0000; /* Vermelho para chamadas */
-            margin-bottom: 5px;
+            margin-bottom: 4px; /* Reduzido a margem inferior */
             white-space: nowrap; 
         }
         /* Estilo para a área da mensagem marquee */
         .marquee-box {
             background-color: #FFFACD; /* Amarelo claro/creme para a marquee (LemonChiffon) */
             border-radius: 15px;
-            padding: 15px 20px; 
+            padding: 10px 15px; /* Reduzido o padding */
             box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
-            font-size: 2.2em; 
+            font-size: 2em; /* Levemente reduzido */
             font-weight: bold;
             color: #333333; /* Preto para o texto da marquee */
             overflow: hidden; 
@@ -117,39 +118,40 @@
         }
 
         .no-data-message {
-            font-size: 1.8em;
+            font-size: 1.6em; /* Levemente reduzido */
             color: #555;
-            margin-top: 20px;
+            margin-top: 15px; /* Reduzido a margem superior */
         }
 
-        /* Animação de Pulsar */
-        @keyframes pulse {
+        /* ANIMAÇÃO DE PULSO REMOVIDA AQUI TAMBÉM */
+        /* Certifique-se de que este bloco @keyframes pulse está COMPLETAMENTE AUSENTE ou COMENTADO */
+        /* @keyframes pulse {
             0% { transform: scale(1); opacity: 1; }
             100% { transform: scale(1.05); opacity: 0.9; }
-        }
+        } */
 
         /* Responsividade */
         @media (max-width: 768px) {
-            .panel-container { padding: 20px; max-width: 90%; } 
-            .header-text { font-size: 2.5em; }
-            .sections-grid { grid-template-columns: 1fr; } 
-            .section-title { font-size: 1.5em; }
-            .ficha-atendendo { font-size: 4em; }
-            .guiche-atendendo { font-size: 2em; }
-            .chamadas-list-item { font-size: 1.6em; } 
-            .marquee-box { font-size: 1.8em; padding: 10px 15px; }
-            .no-data-message { font-size: 1.5em; }
+            .panel-container { padding: 15px; max-width: 95%; } 
+            .header-text { font-size: 2em; }
+            .sections-grid { grid-template-columns: 1fr; } /* Em telas menores, volta para coluna única */
+            .section-title { font-size: 1.4em; }
+            .ficha-atendendo { font-size: 3.5em; }
+            .guiche-atendendo { font-size: 1.8em; }
+            .chamadas-list-item { font-size: 1.4em; } 
+            .marquee-box { font-size: 1.6em; padding: 8px 12px; }
+            .no-data-message { font-size: 1.3em; }
         }
 
         @media (max-width: 480px) {
-            .panel-container { padding: 15px; max-width: 95%; } 
-            .header-text { font-size: 2em; }
-            .section-title { font-size: 1.2em; }
-            .ficha-atendendo { font-size: 3em; }
-            .guiche-atendendo { font-size: 1.5em; }
-            .chamadas-list-item { font-size: 1.3em; } 
-            .marquee-box { font-size: 1.5em; padding: 8px 10px; }
-            .no-data-message { font-size: 1.2em; }
+            .panel-container { padding: 10px; max-width: 98%; } 
+            .header-text { font-size: 1.8em; }
+            .section-title { font-size: 1.1em; }
+            .ficha-atendendo { font-size: 2.8em; }
+            .guiche-atendendo { font-size: 1.3em; }
+            .chamadas-list-item { font-size: 1.1em; } 
+            .marquee-box { font-size: 1.3em; padding: 6px 8px; }
+            .no-data-message { font-size: 1.1em; }
         }
 
         /* Estilo para o overlay de habilitação de áudio */
@@ -182,6 +184,9 @@
         .audio-overlay-button:hover {
             background-color: #218838;
             transform: translateY(-3px);
+        }
+        .audio-overlay-button:active {
+            transform: translateY(0);
         }
         .audio-overlay-message {
             color: white;
@@ -225,13 +230,12 @@
     </div>
 
     <!-- Elemento de áudio -->
-    <audio id="notificationSound" src="https://www.soundjay.com/buttons/beep-07.mp3" preload="auto"></audio>
+    <audio id="notificationSound" src="beep.mp3" preload="auto"></audio>
     <!-- 
-        IMPORTANTE: Se o áudio ainda não funcionar, por favor, tente:
-        1. Trocar o 'src' acima para um arquivo de áudio que você hospede localmente (ex: "beep.mp3" no mesmo diretório).
-           Exemplo: <audio id="notificationSound" src="beep.mp3" preload="auto"></audio>
-        2. Certifique-se de que o arquivo de áudio está acessível e não há bloqueios de rede/CORS.
-        3. Verifique as configurações de autoplay do seu navegador (ex: chrome://settings/content/sound no Chrome).
+        IMPORTANTE: Para que o áudio funcione, você DEVE:
+        1. Colocar um arquivo de áudio (ex: "beep.mp3") na MESMA PASTA deste arquivo HTML.
+        2. Certifique-se de que o nome do arquivo no 'src' (acima) corresponde ao nome do seu arquivo.
+        3. Se ainda não funcionar, verifique as configurações de autoplay do seu navegador (ex: chrome://settings/content/sound no Chrome).
     -->
 
     <!-- Overlay para habilitar áudio -->
@@ -291,6 +295,8 @@
                                 console.log("Áudio tocado com sucesso para a ficha", currentFicha); // DEBUG
                             }).catch(e => {
                                 console.error("Erro ao tocar áudio na atualização:", e); // DEBUG
+                                // Se o áudio falhar aqui, pode ser um bloqueio persistente do navegador.
+                                // A mensagem de status de áudio já foi exibida pelo clique inicial.
                             });
                         }
                         lastCalledFicha = currentFicha;
