--- a/index.html
+++ b/index.html
@@ -302,11 +302,13 @@
 
         // Array de mensagens para alternar
         const messages = [
-            "Bem-vindo ao nosso atendimento! Agradecemos a sua paciência.",
-            "Aguarde sua vez, em breve você será chamado.",
-            "Para um atendimento mais rápido, tenha seus documentos em mãos.",
-            "Nosso objetivo é oferecer o melhor atendimento para você!",
-            "Obrigado por escolher nossos serviços. Tenha um ótimo dia!"
+            "Atente ao chamado neste painel.",
+            "Aguarde sua vez, em breve você será atendido.",
+            "Para sua segurança, evite falar senhas ao telefone.",
+            "Nosso objetivo é oferecer o melhor atendimento!",
+            "Utilize os nossos canais de serviços!",
+            "Disk e peça: 84 3087.0000 - Instagram @auriautopecas",
+            "Obrigado por escolher Auri Autopeças"
         ];
         let currentMessageIndex = 0; // Para controlar qual mensagem está sendo exibida
         let lastAnimationClass = ''; // Para evitar repetir a mesma animação imediatamente
