--- a/index.html
+++ b/index.html
@@ -310,13 +310,17 @@
         // Array de mensagens para alternar
         const messages = [
             "Atente ao chamado neste painel.",
-            "Aguarde sua vez, em breve você será atendido.",
-            "Para sua segurança, evite falar senhas ao telefone.",
-            "Nosso objetivo é oferecer o melhor atendimento!",
+            "Aguarde sua vez, logo você será atendido.",
+            "Troca de produtos, apresente a nota fiscal.",
+            "Queremos melhor atender!",
             "Utilize os nossos canais de serviços!",
-            "Disk e peça: 84 3087.0000 - Instagram @auriautopecas",
+            "Estamos no Instagram: @auriautopecas",
+            "Aqui sempre tem promoções",
+            "Pensou em peças? Auri autopeças!",
+            "Aniversariantes tem descontos especial!",
+            "Auri autopeças - tel 84 3087.0000",
             "Obrigado por escolher Auri Autopeças"
-        ];
+                    ];
         let currentMessageIndex = 0;
         let lastAnimationClass = '';
 
