--- a/index.html
+++ b/index.html
@@ -312,13 +312,15 @@
             "Atente ao chamado neste painel.",
             "Aguarde sua vez, logo você será atendido.",
             "Troca de produtos, apresente a nota fiscal.",
-            "Queremos melhor atender!",
+            "Queremos melhor lhe atender!",
             "Utilize os nossos canais de serviços!",
             "Estamos no Instagram: @auriautopecas",
             "Aqui sempre tem promoções",
             "Pensou em peças? Auri autopeças!",
             "Aniversariantes tem descontos especial!",
             "Auri autopeças - tel 84 3087.0000",
+            "Não esqueça: na chuva, ligue os faróis!",
+            "Verifique sempre as palhetas do limpador do parabrisa!",
             "Obrigado por escolher Auri Autopeças"
                     ];
         let currentMessageIndex = 0;
