--- a/index.html
+++ b/index.html
@@ -317,10 +317,11 @@
             "Estamos no Instagram: @auriautopecas",
             "Aqui sempre tem promoções",
             "Pensou em peças? Auri autopeças!",
+            "Auri Import, + comodidade para você",
             "Aniversariantes tem descontos especial!",
-            "Auri autopeças - tel 84 3087.0000",
+            "Auri autopeças - Tel 84 3087.0000",
             "Não esqueça: na chuva, ligue os faróis!",
-            "Verifique sempre as palhetas do limpador do parabrisa!",
+            "Verifique sempre o limpador do parabrisa!",
             "Obrigado por escolher Auri Autopeças"
                     ];
         let currentMessageIndex = 0;
